--- a/samples/SampleCamundaWorker/appsettings.json
+++ b/samples/SampleCamundaWorker/appsettings.json
@@ -6,8 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": { "rest" : "http://localhost:8080/engine-rest" },
   "AllowedHosts": "*",
-  "clientBaseAdress": "http://localhost:8080/engine-rest",
+
   "maxTasks": 10,
   "usePriority": true,
   "asyncResponseTimeout": 10000,
@@ -22,7 +23,7 @@
       "Variables": [ "halk", "bank", "localVar" ], // Değişken adlarını temsil eden bir JSON Dize değerleri dizisi. Bu konuya ait her bir sonuç görevi için, verilen değişkenler, harici görevin yürütülmesinden erişilebilirlerse de döndürülür. Sağlanmazsa - tüm değişkenler alınır.
       "ProcessDefinitionIds": null, // İşlem tanımı kimliklerine göre görevleri filtreleyin. Json List
       "ProcessDefinitionKeys": null, // İşlem tanımlama anahtarlarına göre görevleri filtreleyin. (Key = BpmnProcessId) - orn: MUTA. Json List
-      "ProcessVariables": { "rasim": 1 }, // İşlem örneği değişken değerlerine dayalı olarak görevleri filtrelemek için kullanılan bir JSON nesnesi. Nesnenin özellik adı, bir işlem değişkeni adını temsil ederken, özellik değeri, görevleri filtrelemek için işlem değişkeni değerini temsil eder.
+      //"ProcessVariables": { "rasim": 1 }, // İşlem örneği değişken değerlerine dayalı olarak görevleri filtrelemek için kullanılan bir JSON nesnesi. Nesnenin özellik adı, bir işlem değişkeni adını temsil ederken, özellik değeri, görevleri filtrelemek için işlem değişkeni değerini temsil eder.
       "TenantIds": null, // Görevleri kiracı kimliklerine göre filtreleyin.
       "BusinessKey": null, // İşlem örneği iş anahtarına dayalı olarak görevlerin filtrelenmesini sağlayan bir Dize değeri.
       "ProcessDefinitionId": null, // İşlem tanımı kimliğine göre görevleri filtreleyin
@@ -47,5 +48,5 @@
       //"ProcessVariables": { "rasim": 18 }
     }
   },
-  "bpmnError": "globalError"
+  "BPMN_ERROR": "globalError"
 }
